--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.1",
+    "react-time-picker": "^7.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
