--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.14.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-date-picker": "^11.0.0",
@@ -20,6 +21,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.1",
     "react-time-picker": "^7.0.0",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
